# highlight-to-learn

./: .gitattributes  README.md  pyproject.toml
app/: main.py
web/: app.js  index.html  style.css
